# accel-sim-framework

./: .estadisticasMaxFLops.swp  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AccelWatch.md  AccelWatch_graphs.xlsx  AccelWattch.md  AccelWattch_graphs.xlsx  Jenkinsfile  Jenkinsfile.bak  LICENSE  README.md  collect.sh  ejecuciones.py  get-accel-sim-traces.py  nightly.Jenkinsfile  nightly.Jenkinsfile.bak  pruebas.sh  release.notes.md  requirements.txt  run.sh  short-tests.sh  tracer.Jenkinsfile  travis.sh
.github/workflows/: long-tests.yml  main.yml  short-tests.yml  tracer-tool.yml  weekly.yml
accelwattch_benchmarks/: extract_binaries.sh  get_data.sh  microbenchmarks.tgz
accelwattch_hw_profiler/: collate_power.sh  gen_hw_perf_csv.py  gen_hw_power_csv.py  hw_perf.csv  hw_power_validation.csv  measureGpuPower.cpp  profile_ubench_power.sh  profile_validation_perf.sh  profile_validation_power.sh  validation.cfg
benchmarks/: get_data.sh
benchmarks_accelwattch/: dct.tgz
executions_stadistics/: .ejemploCambio.swp  EstadisticasMaxFlopsArrg  Prueba  PruebaDibujar  PruebaJuanjo  PruebaJuanjo2  PruebaJuanjo3  PruebaJuanjo4  PruebaJuanjo8  PruebaJuanjo9  PruebaMemRequest  PruebaWithStores  PruebaWithStores2  PruebaWithStores3  PruebaWithStores4  ejemploCambio  estadisticasMaxFLops  pruebaJuanjo5  pruebaJuanjo6  pruebaJuanjo7  pruebaJuanjoMaxFlops  stats_memBW
executions_stadistics/rodinia/: backprop-rodinia-2.0-ft.txt  bfs-rodinia-2.0-ft.txt  heartwall-rodinia-2.0-ft.txt  kmeans-rodinia-2.0-ft.txt  lud-rodinia-2.0-ft.txt  nn-rodinia-2.0-ft.txt  nw-rodinia-2.0-ft.txt  pathfinder-rodinia-2.0-ft.txt  srad_v2-rodinia-2.0-ft.txt
gpu-simulator/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  accel-sim.cc  accel-sim.h  format-code.sh  gpgpu-sim4.md  main.cc  main.py  setup_environment.sh  version_detection.mk
gpu-simulator/ISA_Def/: accelwattch_component_mapping.h  ampere_opcode.h  gcn3_opcode.h  kepler_opcode.h  pascal_opcode.h  trace_opcode.h  turing_opcode.h  volta_opcode.h
gpu-simulator/configs/tested-cfgs/SM75_RTX2060/: trace.config
gpu-simulator/configs/tested-cfgs/SM75_RTX2060_S/: trace.config
gpu-simulator/configs/tested-cfgs/SM7_QV100/: trace.config
gpu-simulator/configs/tested-cfgs/SM7_TITANV/: trace.config
gpu-simulator/configs/tested-cfgs/SM86_RTX3070/: trace.config
gpu-simulator/configs/tested-cfgs/SM87_ORIN/: trace.config
gpu-simulator/gpgpu-sim/: format-code.sh
gpu-simulator/gpgpu-sim/configs/tested-cfgs/SM6_TITANX/: accelwattch_sass_sim.xml  gpgpusim.config
gpu-simulator/gpgpu-sim/configs/tested-cfgs/SM75_RTX2060/: gpgpusim.config
gpu-simulator/gpgpu-sim/configs/tested-cfgs/SM75_RTX2060_S/: accelwattch_sass_sim_alt.xml  gpgpusim.config
gpu-simulator/gpgpu-sim/configs/tested-cfgs/SM7_QV100/: accelwattch_ptx_sim.xml  accelwattch_ptx_sim_alt.xml  accelwattch_sass_hw.xml  accelwattch_sass_hybrid.xml  gpgpusim.config
gpu-simulator/gpgpu-sim/configs/tested-cfgs/SM7_TITANV/: accelwattch_ptx_s1.xml  accelwattch_ptx_s2.xml  accelwattch_sass_hw.xml  accelwattch_sass_hybrid.xml  accelwattch_sass_s1.xml  accelwattch_sass_s2.xml  gpgpusim.config
gpu-simulator/gpgpu-sim/src/: abstract_hardware_model.cc  abstract_hardware_model.h
gpu-simulator/gpgpu-sim/src/cuda-sim/: instructions.cc  ptx.l  ptx_ir.cc
gpu-simulator/gpgpu-sim/src/gpgpu-sim/: gpu-cache.cc  gpu-cache.h  gpu-sim.cc  l2cache.cc  l2cache.h  shader.cc  shader.h
gpu-simulator/python_wrapper/: python_wrapper.cc  python_wrapper.h
gpu-simulator/trace-driven/: CMakeLists.txt  Makefile  main.cc  trace_driven.cc  trace_driven.h  trace_parser.h
gpu-simulator/trace-driven/ISA_Def/: kepler_opcode.h  pascal_opcode.h  trace_opcode.h  turing_opcode.h  volta_opcode.h
gpu-simulator/trace-parser/: CMakeLists.txt  Makefile  trace_parser.cc  trace_parser.h
run_hw/: clean_hw_data.sh  get_hw_data.sh
scripts_accelwattch/: check_job_status.sh  check_job_status_all.sh  collect_power_reports.sh  collect_power_reports_all.sh  launch_jobs.sh  launch_jobs_all.sh
util/: common.py
util/accelwattch/: check_job_status.sh  check_job_status_all.sh  collect_power_reports.sh  collect_power_reports_all.sh  gen_sim_power_csv.py  generate_power_csv.py  generate_sim_power_csv.py  hw_perf_stat.py  launch_jobs.sh  launch_jobs_all.sh  lse_solver.m  quadprog_solver.m
util/correlation/: README.md  aamodt-pc11.collection.sh  clean_hw_data.sh  get_hw_data.sh  lrrr.collection.sh  run_hw.py  run_hw_trace.py  tgrogers-gpu01.collection.sh  tgrogers-pc01.collection.sh  tgrogers-pc02.collection.sh  tgrogers-pc04.collection.sh
util/graphics/: correlation.ipynb  generate-plots.ipynb  plot.ipynb  predict.py  process-vulkan-traces.py  rdc.py  setup_concurrent.py  working_set.ipynb
util/hw_stats/: .gitignore  README.md  clean_hw_data.sh  get_hw_data.sh  get_posted_hw_stats.py  postprocess-nsys-csv.py  run_hw.py  to-install.sh
util/job_launching/: .gitignore  README.md  common.py  get_stats.py  job_status.py  monitor_func_test.py  procman.py  run_simulations.py  slurm.sim  torque.sim
util/nvbit_tools/: install_nvbit.sh  run_hw_trace.py
util/plotting/: .gitignore  README.md  correl_mappings.py  correlate_and_publish.sh  know.correlation.outliers.list  known.correlation.outliers.list  merge-stats.py  plot-correlation.py  plot-get-stats.py  plot-public.sh  sigmetrics_correl.sh  to-install.sh
util/tracer_nvbit/: .gitignore  Makefile  README.md  generate-turing-traces.sh  generate-volta-traces.sh  install_nvbit.sh  nvbit-Linux-x86_64-1.5.3.tar.bz2  run_cutlass_trace.sh  run_hw_trace.py
util/tuner/: README.md  tune_search_command.txt  tuner.py
(+265 files in other folders)
